--- a/css/style.css
+++ b/css/style.css
@@ -233,12 +233,12 @@ footer span {
 	background-color: black;
 }
 
-.patreon a i:hover {
-	background-color: rgb(249, 104, 84);
+.discord a i:hover {
+	background-color: rgb(125,148,221);
 }
 
-.docs a i:hover {
-	background-color: #FF015B;
+.twitch a i:hover {
+	background-color: rgb(145,71,255);
 }
 
 .links {
