--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ footer {
 @media screen and (max-width: 700px) {
 	.wb_button {
 		width: 100px !important;
-		height: fit-content !important;
+		height: auto !important;
 	}
 	.bigavatar {
 		width: 230px;
