--- a/css/style.css
+++ b/css/style.css
@@ -223,22 +223,48 @@ footer span {
 	background-color: #232830;
 	transition: 0.3s;
 	border-radius: 5px;
+	transition: all 265ms ease-out;
 }
 
 .icon a i:hover {
 	cursor: pointer;
 }
 
+.icon a:hover::before {
+	transform: scale(0);
+	transition: transform 265ms ease-in;
+}
+
+.icon a:hover i {
+	transform: scale(1.5);
+	transition: all 265ms ease-in;
+}
+
 .github a i:hover {
+	transform: scale(1.5);
+	color: black;
 	background-color: black;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	transition: all 265ms ease-in;
 }
 
 .discord a i:hover {
+	transform: scale(1.5);
+	color: rgb(125,148,221);
 	background-color: rgb(125,148,221);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	transition: all 265ms ease-in;
 }
 
 .twitch a i:hover {
+	transform: scale(1.5);
+	color: rgb(145,71,255);
 	background-color: rgb(145,71,255);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	transition: all 265ms ease-in;
 }
 
 .links {
@@ -251,6 +277,79 @@ footer span {
 
 .mainblock {
 }
+
+.loader-wrapper {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: #ddaedb;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.loader {
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	position: relative;
+	border: 4px solid #Fff;
+	animation: loader 2s infinite ease;
+}
+
+.loader-inner {
+	vertical-align: top;
+	display: inline-block;
+	width: 100%;
+	background-color: #fff;
+	animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+	0% {
+	  transform: rotate(0deg);
+	}
+	
+	25% {
+	  transform: rotate(180deg);
+	}
+	
+	50% {
+	  transform: rotate(180deg);
+	}
+	
+	75% {
+	  transform: rotate(360deg);
+	}
+	
+	100% {
+	  transform: rotate(360deg);
+	}
+  }
+  
+  @keyframes loader-inner {
+	0% {
+	  height: 0%;
+	}
+	
+	25% {
+	  height: 0%;
+	}
+	
+	50% {
+	  height: 100%;
+	}
+	
+	75% {
+	  height: 100%;
+	}
+	
+	100% {
+	  height: 0%;
+	}
+  }
 
 #canvas {
 	position: absolute;
