--- a/css/style.css
+++ b/css/style.css
@@ -75,15 +75,23 @@ a:hover, a:focus {
 
 footer {
 	bottom: 0;
-  position: relative;
-  background: rgba(255, 255, 255, .05);
-  width: 100%;
+	position: relative;
+	background: rgba(255, 255, 255, .05);
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	margin-top: 100%;
 }
 
 @media screen and (max-height: 800px) , screen and (max-width: 700px) {
+
+	.middle {
+		padding: 0;
+	}
+
+	.text {
+		transform: scale(1);
+	}
 
 	.bigavatar {
 		width: 250px;
@@ -101,6 +109,15 @@ footer {
 }
 
 @media screen and (max-width: 700px) {
+
+	.middle {
+		padding: 0;
+	}
+
+	.text {
+		transform: scale(1.2);
+	}
+
 	.wb_button {
 		width: 100px !important;
 		height: auto !important;
@@ -115,6 +132,15 @@ footer {
 }
 
 @media screen and (max-width: 900px) {
+
+	.middle {
+		padding: 0;
+	}
+
+	.text {
+		transform: scale(1.5);
+	}
+
 	.top {
 		padding: 20px !important;
 	}
@@ -133,6 +159,11 @@ footer span {
 	padding: 5px;
 }
 
+.middle {
+	padding: 20% 0 0;
+	vertical-align: middle;
+}
+
 .wb_button {
     display: block;
     padding: 0;
@@ -145,7 +176,7 @@ footer span {
     height: 42px;
     font-family: Tahoma,Geneva,sans-serif;
     font-size: 14px;
-    text-align: center;
+	text-align: center;
     border: 2px solid #ffffff;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
@@ -154,7 +185,7 @@ footer span {
     color: black;
     text-decoration: none;
     font-weight: bold;
-		transition: 0.3s;
+	transition: 0.3s;
 }
 
 .wb_button:hover {
@@ -212,6 +243,174 @@ footer span {
 	display: block;
 }
 
+.content .text{
+	position: relative;
+	color: #fff;
+	font-weight: 700;
+	font-size: 45px;
+	transform: scale(2);
+	padding: 30px;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+}
+
+.content .text:before,
+.content .text:after {
+	padding: 30px;
+	color: white;
+	content: attr(data-text);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: #232830;
+	overflow: hidden;
+	top: 0;
+}
+
+.content .text:before{
+	left: 3px;
+	text-shadow: -2px 0 red;
+	animation: glitch-1 2s linear infinite reverse;
+}
+
+.content .text:after{
+	left: -3px;
+	text-shadow: -2px 0 blue;
+	animation: glitch-2 2s linear infinite reverse;
+}
+
+@keyframes glitch-1 {
+	0% {
+	  clip: rect(132px, 350px, 101px, 30px);
+	}
+	5% {
+	  clip: rect(17px, 350px, 94px, 30px);
+	}
+	10% {
+	  clip: rect(40px, 350px, 66px, 30px);
+	}
+	15% {
+	  clip: rect(87px, 350px, 82px, 30px);
+	}
+	20% {
+	  clip: rect(137px, 350px, 61px, 30px);
+	}
+	25% {
+	  clip: rect(34px, 350px, 14px, 30px);
+	}
+	30% {
+	  clip: rect(133px, 350px, 74px, 30px);
+	}
+	35% {
+	  clip: rect(76px, 350px, 107px, 30px);
+	}
+	40% {
+	  clip: rect(59px, 350px, 130px, 30px);
+	}
+	45% {
+	  clip: rect(29px, 350px, 84px, 30px);
+	}
+	50% {
+	  clip: rect(22px, 350px, 67px, 30px);
+	}
+	55% {
+	  clip: rect(67px, 350px, 62px, 30px);
+	}
+	60% {
+	  clip: rect(10px, 350px, 105px, 30px);
+	}
+	65% {
+	  clip: rect(78px, 350px, 115px, 30px);
+	}
+	70% {
+	  clip: rect(105px, 350px, 13px, 30px);
+	}
+	75% {
+	  clip: rect(15px, 350px, 75px, 30px);
+	}
+	80% {
+	  clip: rect(66px, 350px, 39px, 30px);
+	}
+	85% {
+	  clip: rect(133px, 350px, 73px, 30px);
+	}
+	90% {
+	  clip: rect(36px, 350px, 128px, 30px);
+	}
+	95% {
+	  clip: rect(68px, 350px, 103px, 30px);
+	}
+	100% {
+	  clip: rect(14px, 350px, 100px, 30px);
+	}
+}
+
+@keyframes glitch-2 {
+	0% {
+	  clip: rect(129px, 350px, 36px, 30px);
+	}
+	5% {
+	  clip: rect(36px, 350px, 4px, 30px);
+	}
+	10% {
+	  clip: rect(85px, 350px, 66px, 30px);
+	}
+	15% {
+	  clip: rect(91px, 350px, 91px, 30px);
+	}
+	20% {
+	  clip: rect(148px, 350px, 138px, 30px);
+	}
+	25% {
+	  clip: rect(38px, 350px, 122px, 30px);
+	}
+	30% {
+	  clip: rect(69px, 350px, 54px, 30px);
+	}
+	35% {
+	  clip: rect(98px, 350px, 71px, 30px);
+	}
+	40% {
+	  clip: rect(146px, 350px, 34px, 30px);
+	}
+	45% {
+	  clip: rect(134px, 350px, 43px, 30px);
+	}
+	50% {
+	  clip: rect(102px, 350px, 80px, 30px);
+	}
+	55% {
+	  clip: rect(119px, 350px, 44px, 30px);
+	}
+	60% {
+	  clip: rect(106px, 350px, 99px, 30px);
+	}
+	65% {
+	  clip: rect(141px, 350px, 74px, 30px);
+	}
+	70% {
+	  clip: rect(20px, 350px, 78px, 30px);
+	}
+	75% {
+	  clip: rect(133px, 350px, 79px, 30px);
+	}
+	80% {
+	  clip: rect(78px, 350px, 52px, 30px);
+	}
+	85% {
+	  clip: rect(35px, 350px, 39px, 30px);
+	}
+	90% {
+	  clip: rect(67px, 350px, 70px, 30px);
+	}
+	95% {
+	  clip: rect(71px, 350px, 103px, 30px);
+	}
+	100% {
+	  clip: rect(83px, 350px, 40px, 30px);
+	}
+}  
+
 .icon {
 	padding: 20px;
 }
@@ -228,7 +427,6 @@ footer span {
 
 .icon a i:hover {
 	transform: scale(1.5);
-
 	cursor: pointer;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
