--- a/css/style.css
+++ b/css/style.css
@@ -707,78 +707,79 @@ footer span {
     margin: 0 auto 10%;
 }
 
-.loader-wrapper {
-	width: 100%;
+.loading-wrapper {
+    width: 100%;
 	height: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-color: #ddaedb;
+	background-color: #232830;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
-.loader {
-	display: inline-block;
-	width: 30px;
-	height: 30px;
-	position: relative;
-	border: 4px solid #Fff;
-	animation: loader 2s infinite ease;
+.sk-cube-grid {
+    width: 40px;
+    height: 40px;
+    margin: 100px auto;
 }
-
-.loader-inner {
-	vertical-align: top;
-	display: inline-block;
-	width: 100%;
-	background-color: #fff;
-	animation: loader-inner 2s infinite ease-in;
-}
-
-@keyframes loader {
-	0% {
-	  transform: rotate(0deg);
-	}
-	
-	25% {
-	  transform: rotate(180deg);
-	}
-	
-	50% {
-	  transform: rotate(180deg);
-	}
-	
-	75% {
-	  transform: rotate(360deg);
-	}
-	
-	100% {
-	  transform: rotate(360deg);
-	}
-  }
   
-  @keyframes loader-inner {
-	0% {
-	  height: 0%;
-	}
-	
-	25% {
-	  height: 0%;
-	}
-	
-	50% {
-	  height: 100%;
-	}
-	
-	75% {
-	  height: 100%;
-	}
-	
-	100% {
-	  height: 0%;
-	}
+.sk-cube-grid .sk-cube {
+  width: 33%;
+  height: 33%;
+  background-color: white;
+  float: left;
+  -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
+}
+.sk-cube-grid .sk-cube1 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube2 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube3 {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s; }
+.sk-cube-grid .sk-cube4 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube5 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube6 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube7 {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s; }
+.sk-cube-grid .sk-cube8 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube9 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+
+@-webkit-keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1); 
   }
+}
+
+@keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1);
+  } 
+}
 
 #canvas {
 	position: absolute;
