--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url('fonts/Righteous-Regular.ttf');
 * {
 	font-family: 'Helvetica Neueu', Helvetica, Arial, sans-serif;
 	margin: 0;
@@ -13,7 +12,7 @@
 
 @font-face {
     font-family: 'Righteous';
-    src: url('fonts/Righteous-Regular.ttf') format('truetype');
+    src: url('../fonts/Righteous-Regular.ttf') format('truetype');
 }
 
 html {
