--- a/projects/JavKing/css/styles.css
+++ b/projects/JavKing/css/styles.css
@@ -232,11 +232,17 @@ footer {
     }
     
     .menu {
-        background: transparent !important;
+        z-index: 1000;
+        position: relative;
+    }
+
+    .active {
+        background: #111;
+        /*  */
     }
 
 	.bigavatar {
-		width: 350px;
+		width: 300px;
 	}
 
 	.toptext h1 {
@@ -272,11 +278,16 @@ footer {
     }
 }
 
-@media all and (min-width: 700px) {
+@media all and (max-width: 700px) {
 
     .menu {
         justify-content: center;
-        background: #222;
+        z-index: 1000;
+        position: relative;
+    }
+
+    .active {
+        background: #111;
     }
 
     .logo img {
@@ -314,7 +325,7 @@ footer {
     }
 
 	.bigavatar {
-		width: 200px;
+		width: 250px;
 	}
 
 	.toptext h3 span {
@@ -602,7 +613,7 @@ footer span {
     right: 0;
     bottom: 0;
     margin: auto;
-    z-index: -1;
+    z-index: -950;
 }
 
 .loader-wrapper {
@@ -682,7 +693,7 @@ footer span {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	z-index: -5;
+	z-index: -1000;
 	opacity: 0.1;
 	top: 0;
 	left: 0;
