--- a/projects/JavKing/css/styles.css
+++ b/projects/JavKing/css/styles.css
@@ -136,13 +136,17 @@ nav a {
 }
 
 .has-submenu > a::after {
-    font-family: FontAwesome;
+    font-family: "Font Awesome 5 Free";
     font-size: 12px;
     line-height: 16px;
     font-weight: 900;
     color: white;
     content: "\f078";
     padding-left: 5px;
+}
+
+.has-submenu i {
+    font-size: 12px;
 }
 
 .subitem a {
@@ -243,7 +247,7 @@ footer {
     }
 
     .active {
-        background: #111;
+        background: #222;
         /*  */
     }
 
@@ -293,7 +297,7 @@ footer {
     }
 
     .active {
-        background: #111;
+        background: #222;
     }
 
     .logo img {
